<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pnapp.tools.apstatus.PromotionActivity">

    <LinearLayout
        android:id="@+id/page"
        android:orientation="vertical"
        android:layout_width="@dimen/promotion_activity_width"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/promo_about"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/promo_request"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/promo_rate"
            android:textSize="16sp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal|top"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_launcher"
                android:gravity="center"
                android:clickable="true"
                android:tag="pnapp.tools.apstatus"
                android:text="@string/app_name"/>

        </LinearLayout>

        <TextView
            android:id="@+id/donate_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/promo_donate"/>

        <Button
            android:id="@+id/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:enabled="false"
            android:onClick="onDonate"
            android:text="@string/donate"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/promo_share"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal|top"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/blogger"
                android:gravity="center"
                android:clickable="true"
                android:tag="blogger"
                android:text="@string/blogger"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/facebook"
                android:gravity="center"
                android:clickable="true"
                android:tag="facebook"
                android:text="@string/facebook"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/googleplus"
                android:gravity="center"
                android:clickable="true"
                android:tag="google_plus"
                android:text="@string/google_plus"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/livejournal"
                android:gravity="center"
                android:clickable="true"
                android:tag="live_journal"
                android:text="@string/live_journal"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/promo_other_apps"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal|top"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/pnapp_pncalc_free"
                android:gravity="center"
                android:clickable="true"
                android:tag="pnapp.pncalc.free"
                android:text="@string/pncalc_free"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/pnapp_pncalc_full"
                android:gravity="center"
                android:clickable="true"
                android:tag="pnapp.pncalc.full"
                android:text="@string/pncalc_full"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/pnapp_tools_ping"
                android:gravity="center"
                android:clickable="true"
                android:tag="pnapp.tools.ping"
                android:text="@string/tools_ping"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
